# hello-world

./: .gitignore  .mcp.json  README.md
.claude/skills/query-browser-visits/: SKILL.md
browser-visit-logger/: .gitignore  README.md  install.sh  move_snapshot  package-lock.json  package.json  point-to-worktree.py  rebuild_visits_data  reset.py  reset_visits_data  schema.sql  seal_snapshot_directory  verify_snapshot_directory
browser-visit-logger/extension/: background.js  manifest.json  manifest.json.template  popup.html  popup.js
browser-visit-logger/native-host/: com.browser.visit.logger.json  com.browser.visit.logger.snapshot_mover.plist.template  com.browser.visit.logger.snapshot_verifier.plist.template  host.py  snapshot_mover.py  snapshot_sealer.py  snapshot_verifier.py  visits_rebuilder.py
browser-visit-logger/swift/: Package.swift
browser-visit-logger/swift/Sources/BVLCore/: Archive.swift  Database.swift  Errors.swift  EventsTable.swift  Logging.swift  Notify.swift  OrphanLog.swift  Paths.swift  Schema.swift  (+4 more)
browser-visit-logger/tests/: background.test.js  conftest.py  popup.test.js  test_host.py  test_schema_parity.py  test_shell_wrappers.py  test_snapshot_mover.py  test_snapshot_sealer.py  test_snapshot_verifier.py  test_visits_rebuilder.py
browser-visit-mcp/: README.md  browser_visits_mcp.sh  pyproject.toml  server.py
browser-visit-mcp/tests/: conftest.py  test_server.py
browser-visit-tools/: .coverage  README.md  generate_reading_list  reading_list.py  requirements-test.txt
browser-visit-tools/tests/: conftest.py  test_reading_list.py
(+4 files in other folders)
